--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Various un-needed haskell/cabal files
 dist
 dist-*
 cabal-dev
@@ -21,3 +22,11 @@ cabal.project.local
 cabal.project.local~
 .HTF/
 .ghc.environment.*
+
+# Vim swap files
+[._]*.s[a-v][a-z]
+*.svg  # comment out if you don't need vector files
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
