--- a/hsfetch.cabal
+++ b/hsfetch.cabal
@@ -10,14 +10,10 @@ version:            0.1.0.0
 
 -- A URL where users can report bugs.
 -- bug-reports:
-license:            NONE
-author:             ValleyKnight
+license:            
+license-file:       LICENSE
+author:             Phate6660
 maintainer:         ValleyKnight@protonmail.com
-
--- A copyright notice.
--- copyright:
--- category:
-extra-source-files: CHANGELOG.md
 
 executable hsfetch
     main-is:          Main.hs
@@ -27,6 +23,8 @@ executable hsfetch
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.1.0
+    build-depends:    
+        base   ^>=4.14.1.0,
+        mr-env ^>=0.1.0.4
     hs-source-dirs:   app
     default-language: Haskell2010
